--- a/src/Heijden.Dns/Heijden.Dns.csproj
+++ b/src/Heijden.Dns/Heijden.Dns.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Header.cs" />
+    <Compile Include="IpV6Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="RecordReader.cs" />
